# deepagent

./: .gitignore  README.md  app.py  index.html  ingest.py  main.py  mcp_manager.py  pyproject.toml  rag.py  tools.py
frontend/: app.js  index.html
