[project]
name = "deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-anthropic>=1.4.1",
    "langchain-core>=1.3.2",
    "langgraph>=1.1.10",
    "mcp>=1.27.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
