[project]
name = "deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain-anthropic>=1.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mcp>=1.27.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.3",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "pywebview>=6.2.1",
    "requests>=2.33.1",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.46.0",
]
